--- a/styles/atom-windows-titlebar-menu.less
+++ b/styles/atom-windows-titlebar-menu.less
@@ -12,7 +12,8 @@
   font-family: 'Material Icons';
   font-style: normal;
   font-weight: 400;
-  src: local('Material Icons'), local('MaterialIcons-Regular'), url(atom://title-bar-replacer/styles/material-icons.woff2) format('woff2');
+  /*src: local('Material Icons'), local('MaterialIcons-Regular'), url(atom://title-bar-replacer/styles/material-icons.woff2) format('woff2');*/
+  src: local('Material Icons'), local('MaterialIcons-Regular'), url(./material-icons.woff2) format('woff2');
 }
 
 .material-icons {
