--- a/styles/atom-windows-titlebar-menu.less
+++ b/styles/atom-windows-titlebar-menu.less
@@ -89,7 +89,7 @@
             //padding-bottom: 5px;
             @box-radius: 2px;
             border-radius: @box-radius;
-            box-shadow: 0px 0px 6px black;
+            box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.25);
             //z-index: 99999;
             //transform: translate(-5px);
             hr {
