--- a/styles/atom-windows-titlebar.less
+++ b/styles/atom-windows-titlebar.less
@@ -2,3 +2,7 @@
 @import "atom-windows-titlebar-icons";
 @import "atom-windows-titlebar-menu";
 @import "atom-windows-titlebar-title";
+
+body.unmaximized {
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
